// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkDown render html without escaing it 1`] = `
<DocumentFragment>
  <div
    class="ejtitxs0 cache-8d7ye5-StyledContainer"
  >
    <p>
      <span>
        Hello
      </span>
      <br />
      <span>
        World
      </span>
    </p>
  </div>
</DocumentFragment>
`;

exports[`MarkDown render paragraph inline 1`] = `
<DocumentFragment>
  .cache-apyx20-StyledContainer-StyledContainer>p {
  display: inline;
}

<div
    class="ejtitxs0 cache-apyx20-StyledContainer-StyledContainer"
  >
    <p>
      <span>
        I am a paragraph.
      </span>
    </p>
    <p>
      <span>
        And a second one
      </span>
    </p>
  </div>
</DocumentFragment>
`;

exports[`MarkDown render simple string 1`] = `
<DocumentFragment>
  .cache-1e856nj-StyledText-lead-lead-block-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 16px;
  margin-top: 48px;
}

.cache-1e856nj-StyledText-lead-lead-block-variantStyles.cache-1e856nj-StyledText-lead-lead-block-variantStyles {
  margin-top: 0;
}

.cache-8m39js-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #1a4dbf;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: gap 250ms ease-out;
  transition: gap 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-8m39js-StyledLink .e4bq1r51 {
  color: inherit;
}

.cache-8m39js-StyledLink::after {
  -webkit-transition: background 250ms ease-out;
  transition: background 250ms ease-out;
  content: '';
  position: absolute;
  top: calc(100% - 1px);
  height: 1px;
  left: 0;
  right: 0;
}

.cache-8m39js-StyledLink:hover,
.cache-8m39js-StyledLink:focus {
  gap: 4px;
  outline: none;
}

.cache-8m39js-StyledLink:hover::after,
.cache-8m39js-StyledLink:focus::after {
  background-color: #1a4dbf;
}

.cache-8m39js-StyledLink:active::after {
  height: 2px;
}

.cache-8m39js-StyledLink[aria-disabled='true'] {
  pointer-events: none;
  color: #a8bff1;
}

.cache-12sgwsl-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-11ifx6m-StyledText-command-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-family: 'Lucida Console',Monaco,'Courier New',Courier,monospace;
  font-size: 13px;
  font-weight: 500;
  border-radius: 4px;
  color: #151a2d;
  background-color: #f6f6f8;
  padding: 8px;
}

<div
    class="ejtitxs0 cache-8d7ye5-StyledContainer"
  >
    <h2
      class="e1g1zfwd0 cache-1e856nj-StyledText-lead-lead-block-variantStyles"
    >
      <span>
        I am a Markdown H1
      </span>
    </h2>
    <h2>
      <span>
        I am a Markdown H2
      </span>
    </h2>
    <p>
      <span>
        I am a simple markdown with 
      </span>
      <strong>
        <span>
          strong
        </span>
      </strong>
      <span>
         
      </span>
      <em>
        <span>
          italic
        </span>
      </em>
      <span>
         content
      </span>
    </p>
    <p>
      <span>
        You can find the complete reference 
      </span>
      <a
        class="cache-8m39js-StyledLink e4bq1r50"
        href="https://commonmark.org/help/"
      >
        <span
          class="e4bq1r51 cache-12sgwsl-StyledText-StyledText e1tg3t120"
        >
          <span>
            here
          </span>
        </span>
      </a>
    </p>
    <p>
      <span>
        Invalid 
      </span>
    </p>
    <p>
      <span>
        I can also render code
      </span>
    </p>
    <p>
      <code
        class="e1g1zfwd0 cache-11ifx6m-StyledText-command-variantStyles"
      >
        const example = 1 // Inline code
      </code>
    </p>
    <pre>
      <code>
          const example = 2
      </code>
    </pre>
  </div>
</DocumentFragment>
`;

exports[`MarkDown render simple string with target blank 1`] = `
<DocumentFragment>
  .cache-1e856nj-StyledText-lead-lead-block-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4a4f62;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 16px;
  margin-top: 48px;
}

.cache-1e856nj-StyledText-lead-lead-block-variantStyles.cache-1e856nj-StyledText-lead-lead-block-variantStyles {
  margin-top: 0;
}

.cache-8m39js-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #1a4dbf;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: gap 250ms ease-out;
  transition: gap 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-8m39js-StyledLink .e4bq1r51 {
  color: inherit;
}

.cache-8m39js-StyledLink::after {
  -webkit-transition: background 250ms ease-out;
  transition: background 250ms ease-out;
  content: '';
  position: absolute;
  top: calc(100% - 1px);
  height: 1px;
  left: 0;
  right: 0;
}

.cache-8m39js-StyledLink:hover,
.cache-8m39js-StyledLink:focus {
  gap: 4px;
  outline: none;
}

.cache-8m39js-StyledLink:hover::after,
.cache-8m39js-StyledLink:focus::after {
  background-color: #1a4dbf;
}

.cache-8m39js-StyledLink:active::after {
  height: 2px;
}

.cache-8m39js-StyledLink[aria-disabled='true'] {
  pointer-events: none;
  color: #a8bff1;
}

.cache-12sgwsl-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1vxww7r-StyledExternalIconContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.cache-14vhymm-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 14px;
  width: 14px;
  min-width: 14px;
  min-height: 14px;
}

.cache-14vhymm-StyledIcon-sizeStyles.cache-14vhymm-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-11ifx6m-StyledText-command-variantStyles {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-family: 'Lucida Console',Monaco,'Courier New',Courier,monospace;
  font-size: 13px;
  font-weight: 500;
  border-radius: 4px;
  color: #151a2d;
  background-color: #f6f6f8;
  padding: 8px;
}

<div
    class="ejtitxs0 cache-8d7ye5-StyledContainer"
  >
    <h2
      class="e1g1zfwd0 cache-1e856nj-StyledText-lead-lead-block-variantStyles"
    >
      <span>
        I am a Markdown H1
      </span>
    </h2>
    <h2>
      <span>
        I am a Markdown H2
      </span>
    </h2>
    <p>
      <span>
        I am a simple markdown with 
      </span>
      <strong>
        <span>
          strong
        </span>
      </strong>
      <span>
         
      </span>
      <em>
        <span>
          italic
        </span>
      </em>
      <span>
         content
      </span>
    </p>
    <p>
      <span>
        You can find the complete reference 
      </span>
      <a
        class="cache-8m39js-StyledLink e4bq1r50"
        href="https://commonmark.org/help/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <span
          class="e4bq1r51 cache-12sgwsl-StyledText-StyledText e1tg3t120"
        >
          <span>
            here
          </span>
        </span>
        <span
          class="cache-1vxww7r-StyledExternalIconContainer e4bq1r52"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-14vhymm-StyledIcon-sizeStyles"
            viewBox="0 0 24 24"
          >
            <path
              d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
            />
          </svg>
        </span>
      </a>
    </p>
    <p>
      <span>
        Invalid 
      </span>
    </p>
    <p>
      <span>
        I can also render code
      </span>
    </p>
    <p>
      <code
        class="e1g1zfwd0 cache-11ifx6m-StyledText-command-variantStyles"
      >
        const example = 1 // Inline code
      </code>
    </p>
    <pre>
      <code>
          const example = 2
      </code>
    </pre>
  </div>
</DocumentFragment>
`;
